# WebRTCServer

./: .gitignore  CMakeLists.txt  README.md
cmake/: boost_config.cmake  common_functions_and_macros.cmake  libyuv_config.cmake  opencv_config.cmake  webrtc_config.cmake
executable/: CMakeLists.txt  executable.vcxproj  main.cpp
source/header/: WebRTCCapturer.h  WebRTCServer_export.h  WebRTCStreamer.h
source/header/internal/: CapturerFactory.h  ConcurrentQueue.h  ConnectionData.h  CustomOpenCVCapturer.h  PeerConnectionManager.h  WebSocketHandler.h  bitmap.h  customvideocapturer.h  entrypoint.h  opencvdetector.h  opencvrenderer.h  opencvutil.h  renderer.h  server.h  session.h  videorenderer.h  webrtc.h
source/src/: WebRTCCapturer.cpp  WebRTCStreamer.cpp
source/src/internal/: CustomOpenCVCapturer.cpp  PeerConnectionManager.cpp  WebSocketHandler.cpp  entrypoint.cpp  renderer.cpp  server.cpp  videorenderer.cpp  webrtc_lin.cpp
